# ProFAST

./: .gitignore  LICENSE  MANIFEST.in  NOTICE.txt  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml  publish-to-test-pypi.yml  pytest.yml
ProFAST/: __init__.py  profast_wrapper.py
ProFAST/examples/: ProFAST_example.py  generic_example.py  incentives_example.py
ProFAST/tests/: generate_excel_comparison.py
ProFAST/tools/: __init__.py  profast_run_tools.py  profast_to_dict_tools.py  utilities.py
tests/: hard_coded.csv  test_compare_with_excel.py  test_outputs.py  test_setting_variables.py  test_solvers.py
